<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cuc.personabasededatos.Registrar">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="guardar"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="normal|bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtcedula"
                android:layout_weight="1"
                android:hint="@string/cedula" />

            <Button
                android:text="@string/buscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cdmBuscar"
                android:layout_weight="1" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions|textPersonName"
            android:ems="10"
            android:id="@+id/txtnombre"
            android:textAlignment="center"
            android:textSize="16sp"
            android:hint="@string/nombre" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtapellido"
            android:textAlignment="center"
            android:textSize="16sp"
            android:hint="@string/apellido" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textSize="20sp"
            android:text="@string/sexo"
            android:textStyle="normal|bold"
            android:padding="20px" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:text="@string/masculino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbmasculino"
                android:textSize="15sp"
                android:layout_weight="1"
                android:checked="true" />

            <RadioButton
                android:text="@string/femenino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbfemenino"
                android:textSize="15sp"
                android:layout_weight="1" />

        </RadioGroup>

        <TextView
            android:text="@string/pasatiempo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:textSize="20sp"
            android:padding="20px"
            android:textStyle="normal|bold" />

        <CheckBox
            android:text="@string/programar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cbprogramar" />

        <CheckBox
            android:text="@string/leer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cbleer" />

        <CheckBox
            android:text="@string/Bailar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cbescribir" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10px">

            <Button
                android:text="@string/guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cdmguardar"
                android:layout_weight="1"
                android:onClick="guardar" />

            <Button
                android:text="@string/modificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cdmmodificar"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10px">

            <Button
                android:text="@string/eliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cdmeliminar"
                android:layout_weight="1" />

            <Button
                android:text="@string/borrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cdmborrar"
                android:layout_weight="1"
                android:onClick="limpiar" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
